# autoperl

./: .gitignore  Makefile.am  README.md  autoperl.pm  configure.ac
src/: util.c
t/: 00-perl.t  common.pm
