# configure.ac

AC_PREREQ(2.68)

AC_INIT([autoperl], [1.4.5], [james@jameshunt.us])

AC_CONFIG_SRCDIR([src/util.c])
AC_CONFIG_AUX_DIR([build])
AC_CONFIG_MACRO_DIR([build])
AC_CONFIG_HEADERS([config.h])

AM_INIT_AUTOMAKE([-Wall -Werror foreign subdir-objects])

AC_PROG_CC
AC_PROG_INSTALL

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
